--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -47,7 +47,8 @@
 
         <main>
 
-            <h3 class="display-4 text-center text-body-emphasis my-5"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> PATROCINADORES</h3>
+            <h3 class="display-4 text-center text-body-emphasis my-5"> <img class="img-fluid"
+                    src="img/lampada-sem-fundo.png" alt="LampMarca"> PATROCINADORES</h3>
 
             <div class="row text-center justify-content-center ">
 
@@ -81,15 +82,22 @@
             <div class="container">
 
                 <div>
-                    <h3 class="display-4 my-5 text-center text-body-emphasis"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> A NOSSA ESCOLHA</h3>
+                    <h3 class="display-4 my-5 text-center text-body-emphasis"> <img class="img-fluid"
+                            src="img/lampada-sem-fundo.png" alt="LampMarca"> A NOSSA ESCOLHA</h3>
                 </div>
 
                 <div class="container row align-content-around bg-body-secondary bg-opacity-25 mb-5 mx-0">
-                    <div class="escolha-complete col-lg lead my-5">
+                    <div class="escolha-complete col-lg lead my-3">
+                        <hr>
                         <p>
-                            Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume
-                            de vendas no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de atrair colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac destaca-se com mais de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável crescimento no setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade significativa, representando um valioso acréscimo para nossa trajetória.
+                            Nós da Infor Mei trazemos como principal produto a criação de um site independente,
+                            que
+                            vai trazer entre suas funções meios de facilitar o gerenciamento de tempo e custo
+                            para
+                            os pequenos empreendedores.
+                            Além de outras informações que envolvem Marketing e precificação de serviços.
                         </p>
+                        <hr>
                     </div>
 
                     <div class="col-lg-5 my-5 text-center"> <img class="img-fluid" src="./img/patrocinadores.png"
@@ -98,14 +106,15 @@
                     </div>
                 </div>
             </div>
-           
-        </main>
 
-        <footer class="container-fluid text-white bg-dark">
-            <div class="row pb-5 pt-5 ">
-            </div>
-        </footer>
+        </main>
     </div>
+    
+    <footer class="container-fluid text-white bg-dark">
+        <div class="row pb-5 pt-5 ">
+        </div>
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
