--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -48,18 +48,20 @@
         <main>
 
             <div class="container text-center text-body-emphasis">
-                <div class="row m-3 p-3">
-                    <div class="col-lg-12">
-                        <h1 class="display-4 my-5"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> O QUE OFERECEMOS</h1>
-                    </div>
+
+                <div class="col-lg-12">
+                    <h3 class="display-4 my-5"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> O QUE OFERECEMOS
+                    </h3>
                 </div>
-                <div class="row m-1 p-3 " >
+
+                <div class="row m-1 p-3 ">
                     <div class="col-lg-4 p-3 rounded">
                         <div class="card1 card ">
                             <img src="img/produtividade.jpg" alt="" class="w-100 rounded-top">
                             <div class="card-body">
                                 <h5 class="card-title fw-bolder">Produtividade</h5>
-                                <p class="card-text">Mantenha seu negócio produtivo, genrenciando-o de forma simples. </p>
+                                <p class="card-text">Mantenha seu negócio produtivo, genrenciando-o de forma simples.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -78,14 +80,16 @@
                             <img src="img/suporte.jpg" alt="" class="w-100 rounded-top">
                             <div class="card-body">
                                 <h5 class="card-title fw-bolder">Suporte</h5>
-                                <p class="card-text">Temos uma equipe pronta para atender às necessidades do seu negócio.
+                                <p class="card-text">Temos uma equipe pronta para atender às necessidades do seu
+                                    negócio.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <h1 class="display-4 text-center my-5 text-body-emphasis"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> NOSSO OBJETIVO</h1>
+            <h3 class="display-4 text-center my-5 text-body-emphasis"> <img src="img/lampada-sem-fundo.png"
+                    alt="LampMarca"> NOSSO OBJETIVO</h3>
             <div class="container">
                 <div class="row mb-5 p-3 justify-content-center bg-body-secondary bg-opacity-25 ">
                     <div class="col-lg-4">
@@ -94,7 +98,11 @@
                     <div class="col-lg mx-5">
                         <hr>
                         <p class="objet-complete lead my-3">
-                            <span class="fw-bold"> O Projeto Infor Mei </span> surge para impulsionar o crescimento e aprimoramento das regiões, identificando e atendendo às necessidades fundamentais das comunidades. Oferecemos suporte essencial para microempreendedores e autônomos, fornecendo ferramentas especializadas de gerenciamento de tempo, marketing e controle de custos, visando aprimorar suas operações e promover o sucesso de seus empreendimentos.
+                            <span class="fw-bold"> O Projeto Infor Mei </span> surge para impulsionar o crescimento e
+                            aprimoramento das regiões, identificando e atendendo às necessidades fundamentais das
+                            comunidades. Oferecemos suporte essencial para microempreendedores e autônomos, fornecendo
+                            ferramentas especializadas de gerenciamento de tempo, marketing e controle de custos,
+                            visando aprimorar suas operações e promover o sucesso de seus empreendimentos.
                         </p>
                         <hr>
                     </div>
