--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -17,7 +17,7 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary bg-opacity-75">
                 <div class="container-fluid px-5 ">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="1Sobre.html">
                         <img src="img/teste1-sem-fundo.png" alt="LogoMarca" width="170" height="125"
                             class="d-inline-block align-text-top">
                     </a>
@@ -31,7 +31,7 @@
                                 <a class="nav-link" aria-current="page" href="1Sobre.html">SOBRE NÓS/SURGIMENTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">PRODUTO</a>
+                                <a class="nav-link" href="2VisãoEProduto.html">PRODUTO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="3Objetivo.html">OBJETIVO</a>
