--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -17,7 +17,7 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary bg-opacity-75">
                 <div class="container-fluid px-5 ">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="1Sobre.html">
                         <img src="img/teste1-sem-fundo.png" alt="LogoMarca" width="170" height="125"
                             class="d-inline-block align-text-top">
                     </a>
